<resources>
    <string name="FIATpromotion_button_claimed">Claimed</string>
    <string name="FIATpromotion_install_to_get_short">Install to get %1$s AppCoins Credits (%2$s)</string>
    <string name="FIATpromotion_message_1">Install the following apps and get up to %s in AppCoins Credits to spend in your favorite games!</string>
    <string name="FIATpromotion_message_2">First, get the AppCoins Wallet to receive your rewards.</string>
    <string name="FIATpromotion_message_3">Then install any of these games to earn your rewards!</string>
    <string name="FIATpromotion_message_popup">Earn %s in AppCoins Credits by installing apps and spend them in your favorite games!</string>
    <string name="FIATpromotion_notification_body">Don\'t forget to claim your %s.</string>
    <string name="FIATpromotion_notification_title">Get %s in AppCoins Credits now!</string>
    <string name="FIATpromotion_over_body_2">In the meanwhile, you can earn AppCoins Credits by installing and spending 2 minutes in any of these apps.</string>
    <string name="FIATpromotion_over_title_2">Earn AppCoins Credits</string>
    <string name="FIATpromotion_short_error_claimed">You already claimed this reward!</string>
    <string name="FIATpromotion_title_error_claimed">Oops…</string>
    <string name="FIATpromotion_update_to_get_short">Update to get %1$s AppCoins Credits (%2$s)</string>
    <string name="WidgetProvider_timestamp_days_ago">%s days ago</string>
    <string name="WidgetProvider_timestamp_hour_ago">%s hour ago</string>
    <string name="WidgetProvider_timestamp_hours_ago">%s hours ago</string>
    <string name="WidgetProvider_timestamp_just_now">Just now</string>
    <string name="WidgetProvider_timestamp_minutes_ago">%s minutes ago</string>
    <string name="WidgetProvider_timestamp_month_ago">1 month ago</string>
    <string name="WidgetProvider_timestamp_months_ago">%s months ago</string>
    <string name="WidgetProvider_timestamp_today">Today</string>
    <string name="WidgetProvider_timestamp_week_ago2">1 week ago</string>
    <string name="WidgetProvider_timestamp_weeks_ago">%s weeks ago</string>
    <string name="WidgetProvider_timestamp_year_ago">1 year ago</string>
    <string name="WidgetProvider_timestamp_years_ago">%s years ago</string>
    <string name="WidgetProvider_timestamp_yesterday">Yesterday</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_mail">Contact:</string>
    <string name="about_site">Website:</string>
    <string name="accept_terms_loggedin_button_accept">ACCEPT</string>
    <string name="accept_terms_loggedin_button_close">CLOSE APTOIDE</string>
    <string name="accept_terms_loggedin_message">By pressing accept you agree to Aptoide\'s %1$s and %2$s</string>
    <string name="accept_terms_loggedin_readPP">READ PRIVACY POLICY</string>
    <string name="accept_terms_loggedin_readTC">READ TERMS &amp; CONDITIONS</string>
    <string name="accept_terms_message_loggedin">Please accept our %1$s and %2$s to continue using Aptoide. These documents include all details about our relationship and how we store your data.</string>
    <string name="accept_terms_signup">By joining Aptoide you agree to Aptoide\'s Terms and Conditions and Content Policy for Developers.</string>
    <string name="accept_terms_title_loggedin">Important Information</string>
    <string name="access_to_get_accounts_rationale">You need to allow access to Get Accounts</string>
    <string name="action">Action</string>
    <string name="add_store_dialog_discover_top_stores">Discover Top Stores</string>
    <string name="add_store_dialog_no_query">Type the name of the store</string>
    <string name="add_store_dialog_title">Find exclusive and tailored content in different stores</string>
    <string name="additional_information">Additional information</string>
    <string name="adult_pin_wrong">Wrong pin. Try again</string>
    <string name="adventure">Adventure</string>
    <string name="all">All</string>
    <string name="all_button_feedback_send">Send feedback</string>
    <string name="all_button_got_it">GOT IT</string>
    <string name="all_button_know_more">KNOW MORE</string>
    <string name="all_button_ok">OK</string>
    <string name="all_message_general_error">Something went wrong. Try again.</string>
    <string name="all_stores">All stores</string>
    <string name="all_title_ad">Ad</string>
    <string name="all_url_privacy_policy">https://www.aptoide.com/legal/privacy?header=0&amp;menu=0</string>
    <string name="all_url_terms_conditions">https://www.aptoide.com/legal/terms?header=0&amp;menu=0</string>
    <string name="apk_not_found">Apk not found</string>
    <string name="apkfy_install_message">Do you want to install this app?</string>
    <string name="app_name">Aptoide</string>
    <string name="app_size">Size: %1$s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appc_card_short">APPCOINS</string>
    <string name="appc_home_bundle_iab">Use Your AppCoins</string>
    <string name="appc_home_bundle_poa">Earn AppCoins Credits</string>
    <string name="appc_info_card_body">Earn AppCoins Credits for free to buy items in your favorite apps.</string>
    <string name="appc_info_card_title">Introducing the AppCoins Universe!</string>
    <string name="appc_info_view_body_1_variable">AppCoins and AppCoins Credits are the currencies for in-app transactions. The best part? You\'ll earn up to %s%% bonus in all purchases!</string>
    <string name="appc_info_view_body_1_variable_no_data">AppCoins and AppCoins Credits are the currencies for in-app transactions. The best part? You\'ll earn a bonus in every purchase!</string>
    <string name="appc_info_view_body_2">You need to install the AppCoins Wallet to get rewards and process all transactions. Once you install it, it\'ll do everything for you!</string>
    <string name="appc_info_view_body_3">You\'ll get a reward for installing and spending 2 minutes in the apps with the symbol %s. You can find them all in the bundle \"Earn AppCoins Credits\" in Aptoide home!</string>
    <string name="appc_info_view_devs_body">Check the new way to distribute apps.</string>
    <string name="appc_info_view_devs_button">Know More</string>
    <string name="appc_info_view_devs_title">Are you a developer?</string>
    <string name="appc_info_view_eskills_body">With e-Skills games, you\'ll earn a prize when beating others players. Just download the game you think you\'re the best at, make your contribution to start the battle and show your skills to prove you deserve the prize in real money. Ready for the challenge? Find all the available games %s.</string>
    <string name="appc_info_view_eskills_body_button">here</string>
    <string name="appc_info_view_eskills_title">Earn Money with e-Skills!</string>
    <string name="appc_info_view_title_1">Everything You Need to Know About AppCoins</string>
    <string name="appc_info_view_title_2">First Things First</string>
    <string name="appc_info_view_title_3">Get Rewarded for Installing Apps!</string>
    <string name="appc_info_view_title_4">A Bonus on Every Purchase!</string>
    <string name="appc_info_view_title_5_variable">You\'ll get up to %s%% Bonus for every purchase you make in an app with the symbol %s. Take advantage and become the ultimate gamer!</string>
    <string name="appc_info_view_title_5_variable_no_data">You\'ll get a bonus in every purchase you make in an app with the symbol %s. Take advantage and become the ultimate gamer!</string>
    <string name="appc_message_appcoins_benefit_1">Huge discounts</string>
    <string name="appc_message_appcoins_benefit_2">Earn free AppCoins Credits</string>
    <string name="appc_message_appcoins_benefit_3">100% secure</string>
    <string name="appc_message_appcoins_benefit_4">No credit card needed</string>
    <string name="appc_message_appcoins_header_2">First Things First</string>
    <string name="appc_message_appcoins_header_3">Get Rewarded for Installing Apps!</string>
    <string name="appview_button_donations">DONATE</string>
    <string name="appview_button_update">Update</string>
    <string name="appview_field_donations_dialogue">Nickname</string>
    <string name="appview_message_donations_completed">Thanks for donating and enjoy the app!</string>
    <string name="appview_message_donations_empty">No donations yet. Be the first to claim the top spot on the leaderboard!</string>
    <string name="appview_message_donations_leaderboard">Donations are a great way to show your support for a developer and make a difference. Donate AppCoins now to get on the leaderboard.</string>
    <string name="appview_message_donations_nowallet">It seems you don\'t have a wallet. Want to install it now?</string>
    <string name="appview_title_donations_dialogue">Donation</string>
    <string name="appview_title_donations_leaderboard">Top Donations</string>
    <string name="auto_update_popup_body">A new version of Aptoide is available with new features and faster navigation. It takes less than 1 minute!</string>
    <string name="auto_update_popup_title">Update Ready to Install!</string>
    <string name="cancel">Cancel</string>
    <string name="create_store_create">Create store</string>
    <string name="create_store_description_hint">Your store description</string>
    <string name="create_store_name">Choose a name for your store</string>
    <string name="create_store_name_inserted">Your store\'s name</string>
    <string name="create_store_theme">Store theme</string>
    <string name="no_search_results_enable_adult_content">Show adult content</string>
    <string name="not_now_button">NOT NOW</string>
    <string name="poa_time_left_hours">HOURS</string>
    <string name="poa_time_left_minutes">MINUTES</string>
    <string name="poa_time_left_seconds">SECONDS</string>
    <string name="search_no_results_adult_body">Play with the filters or enable adult content.</string>
    <string name="search_no_results_title">There are no results for your search.</string>
    <string name="skip">Skip</string>
    <string name="yes">Yes</string>
</resources>