<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ScrollView android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:id="@+id/donations_view" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="19dp" android:layout_marginBottom="32dp" android:text="@string/appview_title_donations_dialogue" style="@style/Aptoide.TextView.Regular.L.BlackAlpha"/>
            <EditText android:id="@+id/nickname" android:paddingLeft="18dp" android:layout_width="match_parent" android:layout_height="56dp" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_marginBottom="32dp" android:hint="@string/appview_field_donations_dialogue" android:imeOptions="actionDone" style="@style/Aptoide.TextView.Regular.M.BlackAlpha"/>
            <EditText android:layout_gravity="center" android:id="@+id/appc_value" android:layout_width="wrap_content" android:layout_height="56dp" android:layout_marginBottom="6dp" android:inputType="numberDecimal" android:imeOptions="actionDone" style="@style/Aptoide.TextView.Regular.XL.Black"/>
            <TextView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="32dp" android:text="APPC" style="@style/Aptoide.TextView.Regular.XS.BlackAlpha"/>
            <SeekBar android:id="@+id/appc_slider" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:layout_marginRight="2dp" android:layout_marginBottom="24dp"/>
            <LinearLayout android:layout_gravity="end" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8dp" android:layout_marginBottom="8dp">
                <android.widget.Button android:id="@+id/cancel_button" android:layout_width="wrap_content" android:layout_marginRight="16dp" android:text="@string/cancel" style="@style/Aptoide.Button.Flat"/>
                <android.widget.Button android:id="@+id/donate_button" android:layout_width="wrap_content" android:text="@string/appview_button_donations" style="@style/Aptoide.Button.Flat"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <ProgressBar android:layout_gravity="center" android:id="@+id/donations_progress" android:visibility="gone" android:layout_width="80dp" android:layout_height="80dp" android:layout_margin="15dp"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/no_wallet_layout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12dp" android:layout_marginTop="25dp" android:layout_marginRight="12dp" android:layout_marginBottom="30dp" android:text="@string/appview_message_donations_nowallet" style="@style/Aptoide.TextView.Medium.M.BlackAlpha"/>
        <LinearLayout android:layout_gravity="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp">
            <android.widget.Button android:id="@+id/no_wallet_cancel_button" android:layout_width="95dp" android:layout_marginRight="12dp" android:text="@string/cancel" style="@style/Aptoide.Button.Flat"/>
            <android.widget.Button android:id="@+id/no_wallet_continue_button" android:layout_width="95dp" android:text="@string/yes" style="@style/Aptoide.Button.Flat"/>
        </LinearLayout>
    </LinearLayout>
    <include android:id="@+id/error_layout" layout="@layout/generic_error_layout"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/thank_you_layout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12dp" android:layout_marginTop="25dp" android:layout_marginRight="12dp" android:layout_marginBottom="30dp" android:text="@string/appview_message_donations_completed" style="@style/Aptoide.TextView.Medium.M.BlackAlpha"/>
        <android.widget.Button android:layout_gravity="end" android:id="@+id/thank_you_ok_button" android:layout_width="95dp" android:layout_marginRight="10dp" android:text="@string/all_button_ok" style="@style/Aptoide.Button.Flat"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
