<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <RelativeLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@+id/image" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:src="@drawable/ic_update_image" android:scaleType="centerCrop" android:adjustViewBounds="true"/>
        <androidx.cardview.widget.CardView android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="35dp" app:cardCornerRadius="8dp" style="?attr/backgroundCard">
            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="200dp">
                <TextView android:textStyle="bold" android:gravity="center" android:id="@+id/auto_update_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/auto_update_popup_title" style="@style/Aptoide.TextView.Medium.M.BlackAlpha"/>
                <TextView android:gravity="center" android:id="@+id/auto_update_body" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/auto_update_popup_body" android:layout_below="@+id/auto_update_title" style="@style/Aptoide.TextView.Regular.XS"/>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="7dp" android:layout_marginTop="24dp" android:layout_marginRight="7dp" android:layout_below="@+id/auto_update_body">
                    <android.widget.Button android:id="@+id/not_now_button" android:layout_width="wrap_content" android:layout_marginRight="7dp" android:text="@string/not_now_button" android:layout_weight="1" style="@style/Aptoide.Button.Ghost"/>
                    <android.widget.Button android:id="@+id/update_button" android:layout_width="wrap_content" android:layout_marginBottom="25dp" android:text="@string/appview_button_update" android:layout_weight="1" style="@style/Aptoide.Button.Alternative"/>
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</FrameLayout>
