<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="?attr/backgroundMain" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout android:id="@+id/appbar" android:background="?attr/toolbarBackground" android:layout_width="match_parent" android:layout_height="wrap_content" app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="wrap_content" app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView android:id="@+id/scroll_view" android:layout_width="match_parent" android:layout_height="0dp" android:fillViewport="true" android:layout_weight="1">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <RelativeLayout android:gravity="center" android:id="@+id/create_store_image_action" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_small" android:layout_marginTop="@dimen/padding_medium" android:layout_marginRight="@dimen/padding_small">
                <ImageView android:id="@+id/create_store_image" android:layout_width="@dimen/store_picture_large_size" android:layout_height="@dimen/store_picture_large_size" android:src="@drawable/create_store_avatar"/>
                <ImageView android:background="@drawable/create_user_camera_background_shape" android:padding="@dimen/padding_very_small" android:layout_width="@dimen/select_picture_camera_icon_size" android:layout_height="@dimen/select_picture_camera_icon_size" android:src="@drawable/create_user_camera" android:layout_alignRight="@+id/create_store_image" android:layout_alignBottom="@+id/create_store_image"/>
            </RelativeLayout>
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:id="@+id/linearLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/padding_small" android:layout_marginTop="@dimen/padding_medium" android:layout_marginRight="@dimen/padding_small">
                    <TextView android:id="@+id/create_store_choose_name_title" android:layout_width="match_parent" android:text="@string/create_store_name" style="@style/Aptoide.TextView.Medium.S"/>
                    <EditText android:id="@+id/create_store_name" android:layout_width="match_parent" android:hint="@string/create_store_name_inserted" android:singleLine="true" android:inputType="text" android:imeOptions="actionDone" style="@style/Aptoide.TextView.Regular.S.BlackAlpha"/>
                    <EditText android:id="@+id/edit_store_description" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/create_store_description_hint" style="@style/Aptoide.TextView.Regular.S.BlackAlpha"/>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/linearLayout" android:layout_alignParentLeft="true">
                    <TextView android:layout_width="match_parent" android:layout_marginLeft="@dimen/padding_small" android:layout_marginTop="@dimen/padding_medium_default" android:layout_marginRight="@dimen/padding_small" android:text="@string/create_store_theme" style="@style/Aptoide.TextView.Regular.M"/>
                    <androidx.recyclerview.widget.RecyclerView android:id="@+id/theme_selector" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_very_small" android:layout_marginBottom="@dimen/padding_very_small"/>
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout android:gravity="bottom|center_vertical|center_horizontal|center" android:orientation="horizontal" android:id="@+id/bottom_buttons" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginLeft="@dimen/padding_small" android:layout_marginTop="@dimen/padding_medium" android:layout_marginRight="@dimen/padding_small" android:layout_marginBottom="@dimen/padding_medium_small" android:weightSum="2" android:layout_weight="1">
                <android.widget.Button android:gravity="center" android:id="@+id/create_store_skip" android:layout_width="8dp" android:layout_marginRight="@dimen/padding_smaller" android:text="@string/skip" android:layout_weight="1" style="@style/Aptoide.Button.Ghost"/>
                <android.widget.Button android:gravity="center" android:id="@+id/create_store_action" android:layout_width="0dp" android:layout_marginLeft="@dimen/padding_smaller" android:layout_marginRight="5dp" android:text="@string/create_store_create" android:layout_weight="1" style="@style/Aptoide.Button.Alternative"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
