<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/no_search_results_layout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="?attr/actionBarSize">
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:src="@drawable/ic_search_no_results"/>
        <TextView android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:text="@string/search_no_results_title" style="@style/Aptoide.TextView.Medium.M.Primary"/>
        <TextView android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginBottom="32dp" android:text="@string/search_no_results_adult_body" style="@style/Aptoide.TextView.Regular.S.Primary"/>
        <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:layout_marginRight="40dp" android:layout_marginBottom="80dp" app:cardCornerRadius="8dp">
            <RelativeLayout android:background="?attr/backgroundCardColor" android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView android:id="@+id/show_adult_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="22dp" android:text="@string/no_search_results_enable_adult_content" android:layout_centerVertical="true" style="@style/Aptoide.TextView.Regular.XS.BlackAlpha"/>
                <androidx.appcompat.widget.SwitchCompat android:id="@+id/no_search_adult_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_marginRight="27dp" android:layout_marginBottom="21dp" android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
