<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textColor="@color/white" android:id="@+id/hours" android:background="@drawable/appview_countdown_rounded_corners_black_background" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/Aptoide.TextView.Medium.L"/>
    <TextView android:textSize="8sp" android:textColor="#949494" android:id="@+id/hours_tag" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/poa_time_left_hours" android:textAllCaps="true" app:layout_constraintEnd_toEndOf="@+id/hours" app:layout_constraintStart_toStartOf="@+id/hours" app:layout_constraintTop_toBottomOf="@+id/hours" style="@style/Aptoide.TextView.Medium"/>
    <TextView android:textSize="24sp" android:textStyle="bold" android:textColor="#494949" android:id="@+id/first_colon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text=":" app:layout_constraintBottom_toBottomOf="@+id/hours" app:layout_constraintStart_toEndOf="@+id/hours" app:layout_constraintTop_toTopOf="@+id/hours" style="@style/Aptoide.TextView.Medium"/>
    <TextView android:textColor="@color/white" android:id="@+id/minutes" android:background="@drawable/appview_countdown_rounded_corners_black_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" app:layout_constraintStart_toEndOf="@+id/first_colon" app:layout_constraintTop_toTopOf="0" style="@style/Aptoide.TextView.Medium.L"/>
    <TextView android:textSize="8sp" android:textColor="#949494" android:id="@+id/minutes_tag" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/poa_time_left_minutes" android:textAllCaps="true" app:layout_constraintEnd_toEndOf="@+id/minutes" app:layout_constraintStart_toStartOf="@+id/minutes" app:layout_constraintTop_toBottomOf="@+id/hours" style="@style/Aptoide.TextView.Medium"/>
    <TextView android:textSize="24sp" android:textStyle="bold" android:textColor="#494949" android:id="@+id/second_colon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text=":" app:layout_constraintBottom_toBottomOf="@+id/minutes" app:layout_constraintStart_toEndOf="@+id/minutes" app:layout_constraintTop_toTopOf="@+id/minutes" style="@style/Aptoide.TextView.Medium"/>
    <TextView android:textColor="@color/white" android:id="@+id/seconds" android:background="@drawable/appview_countdown_rounded_corners_black_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" app:layout_constraintStart_toEndOf="@+id/second_colon" app:layout_constraintTop_toTopOf="0" style="@style/Aptoide.TextView.Medium.L"/>
    <TextView android:textSize="8sp" android:textColor="#949494" android:id="@+id/seconds_tag" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/poa_time_left_seconds" android:textAllCaps="true" app:layout_constraintEnd_toEndOf="@+id/seconds" app:layout_constraintStart_toStartOf="@+id/seconds" app:layout_constraintTop_toBottomOf="@+id/hours" style="@style/Aptoide.TextView.Medium"/>
</androidx.constraintlayout.widget.ConstraintLayout>
